[package]
name = "program"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
solana-program = "=1.10.21"
spl-token = { version = "=3.3.0", features = ["no-entrypoint"] }
num-derive = "=0.3.3"
# TODO proper versions?
num-traits = "*"
thiserror = "*"
borsh = "*"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.10.21"
solana-validator = "=1.10.21"
solana-logger = "=1.10.21"

[lib]
crate-type = ["cdylib", "lib"]
